--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,5 +3,9 @@ services:
   php:
     build: .
     container_name: php
+    expose:
+      - "80"
+    ports:
+      - "8080:80"
     volumes:
       - .:/var/www
