chore: composer が動作しなくなっていたので php.ini の設定を修正

--- a/php.ini
+++ b/php.ini
@@ -3,3 +3,5 @@ xdebug.remote_autostart = 1
 xdebug.remote_host = docker.for.mac.localhost
 xdebug.remote_port = 9000
 xdebug.idekey = PHPSTORM
+
+detect_unicode = Off
