--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -1,6 +1,3 @@
 xdebug.remote_enable = 1
-xdebug.remote_host = docker.for.mac.localhost
+xdebug.remote_host = host.docker.internal
 xdebug.remote_port = 9000
-xdebug.idekey = PHPSTORM
-
-detect_unicode = Off
