chore: Web サーバーに Apache を使用するようにする

--- a/docker/php/Dockerfile
+++ b/docker/php/Dockerfile
@@ -1,15 +1,5 @@
-FROM php:7.2.9-cli
+FROM php:7.2.9-apache
 
-WORKDIR /opt/project
-
-RUN apt-get update \
-&& apt-get -y upgrade \
-&& apt-get install -y \
-    git \
-    zip \
-    unzip \
-&& pecl install xdebug-2.6.1 \
-&& docker-php-ext-enable xdebug
+RUN pecl install xdebug-2.6.1 \
+    && docker-php-ext-enable xdebug
 COPY php.ini /usr/local/etc/php/php.ini
-
-CMD ["php", "-S", "0.0.0.0:80"]
