--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '3'
 services:
-  php:
+  app:
     build:
-      context: ./docker/php
-    container_name: php
+      context: ./docker/app
     ports:
       - "8080:80"
     volumes:
