--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,14 @@
-version: '3'
+version: "3"
 services:
+
+  db:
+    build:
+      context: ./docker/db
+    ports:
+      - "3306:3306"
+    environment:
+      MYSQL_ROOT_PASSWORD: password
+
   app:
     build:
       context: ./docker/app
