--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
             "App\\": "app/"
         }
     },
+    "require": {
+        "robmorgan/phinx": "^0.10.6"
+    },
     "require-dev": {
         "phpunit/phpunit": "^7"
     }
