--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,7 +1,8 @@
 FROM php:7.2.9-apache
 
 RUN pecl install xdebug-2.6.1 \
-    && docker-php-ext-enable xdebug
+    && docker-php-ext-enable xdebug \
+    && docker-php-ext-install mysqli
 
 ENV APACHE_DOCUMENT_ROOT /opt/project/public
 RUN sed -ri -e 's!/var/www/html!${APACHE_DOCUMENT_ROOT}!g' /etc/apache2/sites-available/*.conf
