chore: mysqli 拡張機能に依存していることを明示する

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     },
     "require": {
         "php": "^7.2",
+        "ext-mysqli": "*",
         "robmorgan/phinx": "^0.10.6"
     },
     "require-dev": {
